Fix slight button spacing inconsistency

--- a/client/src/assets/styles/style.scss
+++ b/client/src/assets/styles/style.scss
@@ -58,6 +58,7 @@ button {
   font-weight:400;
   font-size: $font-size;
   text-transform: uppercase;
+  line-height: 1.4;
 
   background: rgba(0,0,0,0.5);
 
